2000-12-07  Ettore Perazzoli  <ettore@helixcode.com>

	* spell.c (spell_suggestion_request): Use an EScrollFrame instead
	of a GtkScrolledWindow, and set the shadow type to `E_SHADOW_IN'.
	* utils.c (sample_frame): Likewise.
	* editor-control-factory.c (set_frame_cb): Likewise.

2000-12-07  Radek Doulik  <rodo@helixcode.com>

	* menubar.c (menubar_setup): html-editor-control renamed to
	GNOME_GtkHTML_Editor

	* engine.c (impl_set_listener): updated to
	IDL:GNOME/GtkHTML/Editor/Listener:1.0

	* GNOME_GtkHTML_Editor.oafinfo: updated for gnome-gtkhtml-editor

	* Makefile.am: renamed html-editor-control to gnome-gtkhtml-editor

	* test-html-editor-control.c (HTML_EDITOR_CONTROL_ID): updated

	* editor-control-factory.c (CONTROL_FACTORY_ID): updated

	* Makefile.am: updated for IDL and OAF changes

	* Editor.idl: renamed from HTMLEditor.idl

	* GNOME_GtkHTML_Editor.oafinfo: changed OAFIIDs, renamed from
	html-editor-control.oafinfo

2000-12-03  Radek Doulik  <rodo@helixcode.com>

	* spell.c (DICTIONARY_IID): updated to changed IID

2000-12-02  Radek Doulik  <rodo@helixcode.com>

	* toolbar.c: use N_ instead of _ for paragraph_style_items
	(setup_paragraph_style_option_menu): use _() here

2000-11-22  Radek Doulik  <rodo@helixcode.com>

	* spell.c: check for cd->dict

	* editor-control-factory.c (editor_control_construct): set editor
	api always

	* image.c (insert_or_apply): use file:// rather than file:

2000-11-15  Radek Doulik  <rodo@helixcode.com>

	* editor-control-factory.c (load_from_corba): update namespace

	* engine.c (impl_set_listener): update namespace

	* updated to API changes

	* HTMLEditor.idl: moved to GNOME namespace

2000-11-14  Radek Doulik  <rodo@helixcode.com>

	* engine.c (impl_run_command): renamed

	* HTMLEditor.idl: changed command to runCommand

	* engine.c: updated to API changes

	* HTMLEditor.idl: StudlyCapsulized

	* spell.c: updated to API changes

	* Spell.idl: copied updated Spell API

2000-11-13  Radek Doulik  <rodo@helixcode.com>
